<resources>
    <string name="app_name">Abiti Trading Investment</string>
    <string name="notifications">Notifications</string>
    <string name="what_do_you_want">What do you want to learn?</string>
    <string name="what_looking_for">What are you looking for?</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="notice_text">⚠ Buy Subsccription Plan. Only R.S.4999!</string>

    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="all_courses">All Courses</string>
    <string name="trading_basics">Trading Basics</string>
    <string name="advance_strategy">Advance Strategy</string>

    <string name="video_name">Video Name</string>
    <string name="free_videos">Free Videos</string>
    <string name="introduction_video">Introduction Video</string>
    <string name="basics_video">Basics Video</string>

    <string name="profile">Profile</string>
    <string name="user_name">Kaif</string>
    <string name="org_code">Organization Code QVOOYD</string>
    <string name="share_facebook">Share on Facebook</string>
    <string name="logout">Logout</string>

    <string name="video_thumbnail_desc">Video thumbnail</string>
    <string name="delete_video_desc">Delete video</string>
    <string name="video_title_placeholder">Lesson 1</string>

    <string name="image_desc">Uploaded image</string>
    <string name="delete_image_desc">Delete image</string>
    <string name="image_title">Image</string>

    <string name="uploaded_image">Uploaded Image</string>
    <string name="image_label">Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="pdf_icon">PDF Icon</string>
    <string name="pdf_file">PDF File</string>
    <string name="delete_pdf">Delete PDF</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="update_profile">Update Profile</string>

</resources>